master
- aeosynth
  add /k/ archive

3.5.0
- aeosynth
  rm whitespace preserveration (fuck you moot)

3.4.0
- queue
  QR posting now preserves whitespace/indentation
  making code or ASCII art easier
- aeosynth
  mv prefetch controls after imgexpand controls, instead of above
  anonymize fetched quote previews
  make the options dialog stationary, usable on opera mobile

3.3.0
- aeosynth
  rm markdown (fuck you moot)

3.2.3
- aeosynth
  fix qr
  4chan X Settings -> 4chan X

3.2.2
- aeosynth
  merge mayhem 2.30.3
- Mayhem
  Various bug fixes.

3.2.1
- Anorov
  fix some markdown bugs
- aeosynth
  fix anonymize

3.2.0
- Anorov
  'Markdown':                     [false, 'Code, italic, bold, italic bold - `, *, **, ***, respectively. _ can be used instead of *']

3.1.0
- Mayhem
  Various bug fixes.
  Add seconds as a supported Time Formatting specifier.
- aeosynth
  'Prefetch':                     [false, 'Prefetch images.']
  fix another thread updating bug

3.0.1
- aeosynth
  fix thread updating, possibly

3.0.0
- aeosynth
  'Quote Threading':              [false, 'Thread convsersations']
  'Rollover':                     [true,  'Index navigation will fallback to page navigation.']
  fix thread hiding
  allow auto-giffing of /gif/
  allow reply highlighting to de-highlight
  rm double highlighting of highlighted reply

2.30.1
- Mayhem
  Fix 4chan X not affecting fetched posts on Firefox Stable and Opera.

2.30.0
- Mayhem
  Support 4chan's new HTML.
  Add Spoiler indicator option in File Info Formatting
  Remove archive.no-ip.org archive redirections.

2.29.5
- Mayhem
  Fix QR filetype checking on /w/.

2.29.4
- Mayhem
  Auto-GIF will not run in /gif/.
  Fix QR filetype checking.

2.29.3
- Mayhem
  Update Quick Reply posting method, this fixes compatibility for uncommon browsers such as
    Opera Mobile 12 and Luakit for example.

2.29.2
- Mayhem
  Add HTTPS support.
  Ban support improvements and fixes.

2.29.1
- Mayhem