@@ -126,7 +126,8 @@
         'Remember QR size': [false, 'Remember the size of the Quick reply (Firefox only).'],
         'Remember Subject': [false, 'Remember the subject field, instead of resetting after posting.'],
         'Remember Spoiler': [false, 'Remember the spoiler state, instead of resetting after posting.'],
-        'Hide Original Post Form': [true, 'Replace the normal post form with a shortcut to open the QR.']
+        'Hide Original Post Form': [true, 'Replace the normal post form with a shortcut to open the QR.'],
+        'Preserve Whitespace': [false, 'Preserve whitespace in posts using special characters']
       },
       Quoting: {
         'Quote Backlinks': [true, 'Add quote backlinks'],
@@ -2033,6 +2034,13 @@
         recaptcha_challenge_field: challenge,
         recaptcha_response_field: response + ' '
       };
+      if (Conf['Preserve Whitespace']) {
+        post.com = post.com.replace(/\t/g, '        ').replace(/^ +| {2,}/gm, function(it) {
+          return it.replace(/ /g, String.fromCharCode(12288));
+        }).replace(/\n{3,}/g, function(it) {
+          return it.replace(/\n/g, '\n\x0b');
+        });
+      }
       form = new FormData();
       for (name in post) {
         val = post[name];
