@@ -1,6 +1,9 @@
 master
 - aeosynth
   add /k/ archive
+- queue
+  re-added whitespace preservation
+	don't tell moot how it works
 
 3.5.0
 - aeosynth
